<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context="com.example.devpartnerssoftware.splashactivity.LoginActivity">

    <TextView
        android:id="@+id/facebookText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/facebook_name"
        android:textColor="@color/white"
        android:textSize="46sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.129" />

    <EditText
        android:id="@+id/emailEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_marginTop="58dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/rounded_edittext"
        android:textSize="15sp"
        android:inputType="textEmailAddress"
        android:hint="@string/editEmail"
        android:textColor="@color/blackColorText"
        app:layout_constraintTop_toBottomOf="@id/facebookText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/passwordEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_edittext"
        android:textSize="15sp"
        android:padding="15dp"
        android:inputType="textPassword"
        android:hint="@string/editPassword"
        android:textColor="@color/blackColorText"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        app:layout_constraintTop_toBottomOf="@id/emailEdit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:text="@string/buttonLogin"
        android:background="@drawable/rounded_button"
        app:layout_constraintTop_toBottomOf="@id/passwordEdit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/forgotpasswordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/text_forgot_password"
        android:textSize="16sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/loginButton"
        android:textAlignment="center"/>

</android.support.constraint.ConstraintLayout>
